--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,29 @@
 @import "tailwindcss";
+@import "leaflet/dist/leaflet.css";
+@import "leaflet/dist/leaflet.css";
 
 @theme {
     --color-theme-pink: #ED5485;
     --color-theme-cream: #FFFBCB;
     --color-theme-brown: #3F2D20;
 }
+
+/* styles.css or global CSS file */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #ed5485;
+    border-radius: 10px;
+    border: 2px solid #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #e60076;
+  }
+  
